grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional(seq(repeat1($.file_annotation), $._semi)),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semi))
		),

		type_parameters: $ => seq("<", sep1($.type_parameter, ","), ">"),

		type_parameter: $ => seq(
			optional($.type_parameter_modifiers),
			alias($.simple_identifier, $.type_identifier),
			optional(seq(":", $._type))
		),

		_function_value_parameters: $ => seq("(", optional(sep1($._function_value_parameter, ",")), ")"),

		function_declaration: $ => prec.right(seq( // TODO
			optional($.modifiers),
			"fun",
			optional($.type_parameters),
            optional(seq($.receiver_type, ".")),
			$.simple_identifier,
			$._function_value_parameters,
			optional(seq(":", $._type)),
			optional($.type_constraints),
			optional($.function_body)
		)),

		function_body: $ => choice($._block, seq("=", $._expression)),

        // NOTE: According to the Kotlin grammar, receiver_type should have a 
        // $.type_reference instead of $._simple_user_type
        // but using $.type_reference generate a wrong parse tree.
        // Maybe this should be revisited
        receiver_type: $ => prec(PREC.RECEIVER_TYPE, seq(
            optional($.type_modifiers),
            choice($.parenthesized_type, $.nullable_type, $._simple_user_type),
        )),

		variable_declaration: $ => seq(
			// repeat($.annotation), TODO
			$.simple_identifier,
			optional(seq(":", $._type))
		),

		property_declaration: $ => prec.right(seq(
			optional($.modifiers),
			choice("val", "var"),
			optional($.type_parameters),
			// TODO: Receiver type
			$.variable_declaration, // TODO: Multi-variable-declaration
			optional($.type_constraints),
			optional(choice(
				seq("=", $._expression),
				$.property_delegate
			)),
			choice(
				// TODO: Getter-setter combinations
				optional($.getter),
				optional($.setter)
			)
		)),

		parameters_with_optional_type: $ => seq("(", sep1($.parameter_with_optional_type, ","), ")"),

		parameter_with_optional_type: $ => prec(PREC.PARAMETER_WITH_OPTIONAL_TYPE, seq(
			optional($.parameter_modifiers),
			$.simple_identifier,
			optional(seq(":", $._type))
		)),

		parameter: $ => seq($.simple_identifier, ":", $._type),

		_type: $ => seq(
			optional($.type_modifiers),
			choice(
				$.parenthesized_type,
				$.nullable_type,
				$._type_reference,
				$.function_type
			)
		),

		_type_reference: $ => choice(
			$.user_type,
			"dynamic"
		),

		nullable_type: $ => seq(
			choice($._type_reference, $.parenthesized_type),
			repeat1($._quest)
		),

		_quest: $ => "?",

		// TODO: Figure out a better solution than right associativity
		//       to prevent nested types from being recognized as
		//       unary expresions with navigation suffixes.

		user_type: $ => prec.right(sep1($._simple_user_type, ".")),

		_simple_user_type: $ => prec.right(seq(
			alias($.simple_identifier, $.type_identifier),
			optional($.type_arguments)
		)),

		type_projection: $ => choice(
			seq(optional($.type_projection_modifiers), $._type),
			"*"
		),

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		control_structure_body: $ => choice($._block, $._statement),

		_block: $ => prec(PREC.BLOCK, seq("{", optional($.statements), "}")),

		for_statement: $ => prec.right(seq(
			"for",
			"(",
			repeat($.annotation),
			choice($.variable_declaration), // TODO: Multi-variable declaration
			"in",
			$._expression,
			")",
			optional($.control_structure_body)
		)),

		_semi: $ => /[\r\n]+/,

		assignment: $ => choice(
			prec.left(PREC.ASSIGNMENT, seq($.directly_assignable_expression, $._assignment_and_operator, $._expression)),
			prec.left(PREC.ASSIGNMENT, seq($.directly_assignable_expression, "=", $._expression)),
		),

		// ==========
		// Expressions
		// ==========

		_expression: $ => choice(
			$._unary_expression,
			$._binary_expression,
			$._primary_expression
		),

		// Unary expressions

		call_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.call_suffix)),

        expect_expression: $ => prec.left(PREC.EXPECT, seq("expect", $.call_suffix)),

		// Binary expressions

		multiplicative_expression: $ => prec.left(PREC.MULTIPLICATIVE, seq($._expression, $._multiplicative_operator, $._expression)),

		additive_expression: $ => prec.left(PREC.ADDITIVE, seq($._expression, $._additive_operator, $._expression)),

		call_suffix: $ => prec.left(seq(
			// optional($.type_arguments), // TODO: Type args conflict with 'less than', see above
			choice(
				seq(optional($.value_arguments), $.annotated_lambda),
				$.value_arguments
			)
		)),

		type_arguments: $ => prec.left(PREC.TYPE_ARGS, seq("<", sep1($.type_projection, ","), ">")),

		value_arguments: $ => seq("(", optional(sep1($.value_argument, ",")), ")"),

		value_argument: $ => seq(
			optional($.annotation),
			optional(seq($.simple_identifier, "=")),
			optional("*"),
			$._expression
		),

		line_string_literal: $ => seq('"', repeat(choice($._line_string_content, $._interpolation)), '"'),

		_line_string_content: $ => choice(
			$._line_str_text,
			$._line_str_escaped_char
		),

		_interpolation: $ => choice(
			seq("${", alias($._expression, $.interpolated_expression), "}"),
			seq("$", alias($.simple_identifier, $.interpolated_identifier))
		),

		anonymous_function: $ => seq(
			"fun",
            optional(seq($._type, ".")),
            $.parameters_with_optional_type,
            optional(seq(":", $._type)),
            optional($.type_constraints),
			optional($.function_body)
		),

		when_subject: $ => seq(
			"(",
			optional(seq(
				repeat($.annotation),
				"val",
				$.variable_declaration,
				"="
			)),
			$._expression,
			")",
		),

		when_expression: $ => seq(
			"when",
			optional($.when_subject),
			"{",
			repeat($.when_entry),
			"}"
		),

		when_entry: $ => seq(
			choice(
				seq($.when_condition, repeat(seq(",", $.when_condition))),
				"else"
			),
			"->",
			$.control_structure_body,
			optional($._semi)
		),

		when_condition: $ => seq(
			$._expression,
			$.range_test,
			$.type_test
		),

		_assignment_and_operator: $ => choice("+=", "-=", "*=", "/=", "%="),

		_additive_operator: $ => choice("+", "-"),

		_multiplicative_operator: $ => choice("*", "/", "%"),

		directly_assignable_expression: $ => choice(
			$.simple_identifier
			// TODO
		),

		// ==========
		// Modifiers
		// ==========

		simple_identifier: $ => $._lexical_identifier, // TODO

		integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

		_lexical_identifier: $ => choice(
			/[a-zA-Z_][a-zA-Z_0-9]*/,
			/`[^\r\n`]+`/
		),
