corpus/functions.txt
==================
Top-level functions
==================

fun main() {}

---

(source_file
	(function_declaration
		(simple_identifier)
		(function_body)))

==================
Generic functions
==================

fun <T> test() {}

---

(source_file
	(function_declaration
		(type_parameters (type_parameter (type_identifier)))
		(simple_identifier)
		(function_body)))

==================
Anonymous functions
==================

fun(x: Int, y: Int): Int = x + y

---

(source_file 
    (anonymous_function
        (parameters_with_optional_type
            (parameter_with_optional_type
                (simple_identifier) (user_type 
                    (type_identifier)))
            (parameter_with_optional_type
                (simple_identifier)
                    (user_type (type_identifier))))
        (user_type (type_identifier))
            (function_body (additive_expression (simple_identifier) (simple_identifier)))))


==================
Extension Functions 
==================

fun Class.test() {}

fun <T> Class<T>.test() {}

fun Class<Int>.test() {}

fun Any?.toString(): String {}

---


(source_file
    (function_declaration
        (receiver_type (type_identifier))
            (simple_identifier) (function_body))
    (function_declaration
        (type_parameters (type_parameter (type_identifier)))
            (receiver_type (type_identifier)
                (type_arguments (type_projection
                    (user_type (type_identifier)))))
                        (simple_identifier) (function_body))
    (function_declaration
        (receiver_type (type_identifier)
            (type_arguments (type_projection
                (user_type (type_identifier)))))
                    (simple_identifier) (function_body))
    (function_declaration
        (receiver_type (nullable_type
            (user_type (type_identifier))))
                (simple_identifier)
                    (user_type (type_identifier)) (function_body)))


==================
Functions with parameters
==================

fun main(args: Array<String>) {}

fun sum(a: Int, b: Int) = a + b

---

(source_file
	(function_declaration
		(simple_identifier)
		(parameter 
			(simple_identifier)
			(user_type
				(type_identifier)
				(type_arguments (type_projection (user_type (type_identifier))))))
		(function_body))
	(function_declaration
		(simple_identifier)
		(parameter
			(simple_identifier)
			(user_type (type_identifier)))
		(parameter
			(simple_identifier)
			(user_type (type_identifier)))
		(function_body
			(additive_expression
				(simple_identifier)
				(simple_identifier)))))

==================
Functions with return types
==================

fun answerToTheUltimateQuestionOfLifeTheUniverseAndEverything(): Int = 42

---

(source_file
	(function_declaration
		(simple_identifier)
		(user_type (type_identifier))
		(function_body (integer_literal))))

==================
Single-expression functions
==================

fun double(x: Int): Int = x * 2

fun SomeObject.double(x: Int) = x * 2

---

(source_file 
    (function_declaration (simple_identifier) 
        (parameter (simple_identifier)
            (user_type (type_identifier)))
                (user_type (type_identifier))
                    (function_body (multiplicative_expression
                        (simple_identifier) (integer_literal))))

    (function_declaration (receiver_type (type_identifier))
        (simple_identifier)
            (parameter (simple_identifier) (user_type (type_identifier)))
                (function_body (multiplicative_expression (simple_identifier) (integer_literal)))))
