corpus/statements.txt
==================
For statements
==================

for (value in values) {}

---

(source_file
	(for_statement
		(variable_declaration (simple_identifier))
		(simple_identifier)
		(control_structure_body)))

==================
Assignments
==================

var foo = 1
foo = 3

---

(source_file
  (property_declaration
    (variable_declaration
      (simple_identifier))
    (integer_literal))
  (assignment
    (directly_assignable_expression
      (simple_identifier))
    (integer_literal)))
